Fix overflow

--- a/source/stylesheets/custom/_mid-tabs.scss
+++ b/source/stylesheets/custom/_mid-tabs.scss
@@ -15,13 +15,10 @@
   overflow-x: auto !important;
 }
 
-.mid-tabs-content {
-  // border-top: 5px solid #0066cc;
-  // background-color: #e6f2ff;
-  // height: 650px;
-}
 .mid-tabs-pane {
-  // height: 100%;
   height: 300px;
+}
+.mid-tabs-pane-inner {
+  height: 100%;
   overflow: auto;
 }
